<resources>
    <string name="app_name">Spot Finder</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not registered?</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered">Already Registered?</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_current_location_map">Map</string>
    <string name="saveLocationTitle">Save Location</string>
    <string name="latitudeTxt">Latitude</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="title_activity_display_location">Map</string>
</resources>
