<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.seanmoylan.myapplication.RegisterActivity"
    android:background="@color/primaryColor">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <EditText
        android:id="@+id/regUsernameText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="@color/primaryTextColor"
        android:drawableLeft="@drawable/ic_person_black_24dp"/>

    <EditText
        android:id="@+id/regEmailText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/email"
        android:inputType="text"
        android:textColor="@color/primaryTextColor"
        android:drawableLeft="@drawable/ic_email_black_24dp"/>

    <EditText
        android:id="@+id/regPasswordText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/primaryTextColor"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/regConfirmPasswordText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/primaryTextColor"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/primaryTextColor"
        android:background="@color/secondaryColor"
        android:text="@string/sign_up" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/already_registered" />
        <TextView
            android:id="@+id/regSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:clickable="true"
            android:text="@string/sign_in"
            android:textColor="#ffffff"/>

    </LinearLayout>



</LinearLayout>
