<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.seanmoylan.myapplication.LoginActivity"
    android:background="@color/orange">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/spot_finder"/>

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_marginTop="50dp"
        android:textColor="@color/primaryTextColor"
        android:drawableLeft="@drawable/ic_person_white_24dp"/>

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/primaryTextColor"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/primaryTextColor"
        android:text="@string/login"
        android:textColor="@color/secondaryDarkColor" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/not_registered" />
        <TextView
            android:id="@+id/registerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:clickable="true"
            android:text="@string/register"
            android:textColor="#ffffff"/>

    </LinearLayout>


</LinearLayout>
